deploy/build/cmdb/templates/ns.yaml
# Source: cmdb/templates/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cmdb
  namespace: default
