deploy/build/cmdb/templates/deployment.yaml
# Source: cmdb/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-cmdb
  namespace: default
  labels:
    helm.sh/chart: cmdb-0.3.0
    app.kubernetes.io/name: cmdb
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "seizadi-dev-4d95422-unsupported"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cmdb
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cmdb
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-cmdb
      securityContext: {}
      containers:
        - name: cmdb
          securityContext: {}
          image: "soheileizadi/cmdb-server:seizadi-dev-4d95422-unsupported"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
            - containerPort: 9090
              name: grpc
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          resources: {}
