deploy/build/cmdb/templates/migrations.yaml
# Source: cmdb/templates/migrations.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: cmdb
  name: cmdb-dev-seizadi
spec:
  restartPolicy: OnFailure
  containers:
  - name: migration
    image: infoblox/migrate:v1.0.0
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - mountPath: "/service-migrations"
      name: migrations
    command:
    - /migrate
    args:
    - "--source"
    - "file://service-migrations/migrations"
    - "--database.dsn"
    - "$(dsn)"
    - "up"
  volumes:
  - name: migrations
    emptyDir: {}
